[tool.poetry]
name = "diag-vae"
version = "0.1.0"
description = ""
authors = ["hsteude <henrik.steude@gmail.com>"]
readme = "README.md"
packages = [{include = "diag_vae"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
ipython = "^8.11.0"
ipykernel = "^6.22.0"
ipdb = "^0.13.13"
pdbpp = "^0.10.3"
pytorch-lightning = "^2.0.0"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
tensorboardx = "^2.6"
tensorboard = "^2.12.0"
nbstripout = "^0.6.1"
jupyter = "^1.0.0"
jupyterlab = "^3.6.2"
pyreadr = "^0.4.7"
plotly = "^5.14.0"
openpyxl = "^3.1.2"
pyarrow = "^11.0.0"
lightning = "^2.0.2"
loguru = "^0.7.0"
kfp = "^2.0.1"
s3fs = "^2023.6.0"
rpy2 = "^3.5.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
